--- a/lab-12-sc-k8s/pom.xml
+++ b/lab-12-sc-k8s/pom.xml
@@ -13,19 +13,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>lab-12-sc-k8s</name>
     <description>lab-12-sc-k8s</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
+    <modules>
+        <module>lab-12-sc-k8s-service</module>
+        <module>lab-12-sc-k8s-caller</module>
+    </modules>
 
 
 </project>
