--- a/lab-12-sc-k8s/lab-12-sc-k8s-caller/pom.xml
+++ b/lab-12-sc-k8s/lab-12-sc-k8s-caller/pom.xml
@@ -3,16 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.10</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.jo</groupId>
+        <artifactId>lab-12-sc-k8s</artifactId>
+        <version>${revision}</version>
     </parent>
-    <groupId>com.jo</groupId>
+
     <artifactId>lab-12-sc-k8s-caller</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+
     <name>lab-12-sc-k8s-caller</name>
-    <description>lab-12-sc-k8s-caller</description>
 
     <properties>
         <spring.cloud.version>2021.0.5</spring.cloud.version>
@@ -21,7 +19,13 @@
 
     <profiles>
         <profile>
-            <id>local</id>
+            <id>dev</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.alibaba.cloud</groupId>
+                    <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                </dependency>
+            </dependencies>
         </profile>
 
         <profile>
@@ -31,15 +35,21 @@
                     <groupId>org.springframework.cloud</groupId>
                     <artifactId>spring-cloud-starter-kubernetes-client-all</artifactId>
                 </dependency>
-
-                <dependency>
-                    <groupId>org.springframework.cloud</groupId>
-                    <artifactId>spring-cloud-starter-openfeign</artifactId>
-                </dependency>
             </dependencies>
         </profile>
     </profiles>
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,17 +73,6 @@
         </dependency>
     </dependencies>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <finalName>${project.artifactId}</finalName>
