--- a/lab-12-sc-k8s/pom.xml
+++ b/lab-12-sc-k8s/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.jo</groupId>
     <artifactId>lab-12-sc-k8s</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>lab-12-sc-k8s</name>
     <description>lab-12-sc-k8s</description>
 
@@ -19,5 +19,42 @@
         <module>lab-12-sc-k8s-caller</module>
     </modules>
 
+
+    <packaging>pom</packaging>
+    <properties>
+        <spring.boot.version>2.7.10</spring.boot.version>
+        <spring.cloud.version>2021.0.5</spring.cloud.version>
+        <spring.cloud.alibaba.version>2021.0.5.0</spring.cloud.alibaba.version>
+        <java.version>11</java.version>
+        <revision>0.0.1-SNAPSHOT</revision>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
